# pretalx-public-voting

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  data.json  justfile  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Containerfile  devcontainer.json  postCreate.sh
.github/workflows/: style.yml  tests.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1e70599da8632d32___init___py.html  z_1e70599da8632d32_apps_py.html  z_1e70599da8632d32_exporters_py.html  z_1e70599da8632d32_forms_py.html  z_1e70599da8632d32_models_py.html  z_1e70599da8632d32_signals_py.html  z_1e70599da8632d32_utils_py.html  z_1e70599da8632d32_views_py.html
pretalx_public_voting/: __init__.py  apps.py  exporters.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
pretalx_public_voting/locale/ar/LC_MESSAGES/: django.po
pretalx_public_voting/locale/bg/LC_MESSAGES/: django.po
pretalx_public_voting/locale/cs/LC_MESSAGES/: django.po
pretalx_public_voting/locale/de_DE/LC_MESSAGES/: django.po
pretalx_public_voting/locale/de_Formal/LC_MESSAGES/: django.po
pretalx_public_voting/locale/el/LC_MESSAGES/: django.po
pretalx_public_voting/locale/en_Mozilla/LC_MESSAGES/: django.po
pretalx_public_voting/locale/es/LC_MESSAGES/: django.po
pretalx_public_voting/locale/es_MX/LC_MESSAGES/: django.po
pretalx_public_voting/locale/fr_FR/LC_MESSAGES/: django.po
pretalx_public_voting/locale/id/LC_MESSAGES/: django.po
pretalx_public_voting/locale/it/LC_MESSAGES/: django.po
pretalx_public_voting/locale/ja_JP/LC_MESSAGES/: django.po
pretalx_public_voting/locale/ko/LC_MESSAGES/: django.po
pretalx_public_voting/locale/nl/LC_MESSAGES/: django.po
pretalx_public_voting/locale/pl/LC_MESSAGES/: django.po
pretalx_public_voting/locale/pt_BR/LC_MESSAGES/: django.po
pretalx_public_voting/locale/pt_PT/LC_MESSAGES/: django.po
pretalx_public_voting/locale/ru/LC_MESSAGES/: django.po
pretalx_public_voting/locale/sl/LC_MESSAGES/: django.po
pretalx_public_voting/locale/sv/LC_MESSAGES/: django.po
pretalx_public_voting/locale/test/LC_MESSAGES/: django.po
pretalx_public_voting/locale/vi/LC_MESSAGES/: django.po
pretalx_public_voting/locale/zh_Hant/LC_MESSAGES/: django.po
pretalx_public_voting/locale/zh_TW/LC_MESSAGES/: django.po
pretalx_public_voting/migrations/: 0001_initial.py  0002_publicvotingsettings.py  0003_migrate_settings.py  0004_publicvotingsettings_allowed_emails.py  0005_publicvotingsettings_show_session_description.py  0006_publicvotingsettings_limit_tracks.py  0007_publicvotingsettings_limit_submission_types.py
pretalx_public_voting/static/pretalx_public_voting/: share.js  vote.css  vote.js
pretalx_public_voting/templates/pretalx_public_voting/: settings.html  signup.html  submission_list.html  thanks.html
tests/: conftest.py  test_main.py
