[project]
name = "pretalx-public-voting"
dynamic = ["version"]
description = "A public voting plugin for pretalx."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = []

[project.urls]
homepage = "https://github.com/pretalx/pretalx-public-voting"
repository = "https://github.com/pretalx/pretalx-public-voting.git"

[project.entry-points."pretalx.plugin"]
pretalx_public_voting = "pretalx_public_voting:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_public_voting.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]
